Fix search box/button alignment

--- a/style.css
+++ b/style.css
@@ -92,19 +92,17 @@ main {
 }
 
 #search-box-container {
-	min-width: 980px;
-	width: 1920px;
-	margin-top: 20px;
+	padding: 20px;
+	margin: 0 auto;
 }
 
 #search-box {
-	position: relative;
 	width: 528px;
 	height: 34px;
 	border: solid 1px #d0caca;
-	margin: 0 auto;
 	border-radius: 3px;
 	box-shadow: 0px 2px 1px 0px rgba(1, 1, 0, .15);
+	margin: auto;
 }
 
 #search-box:hover {
@@ -119,7 +117,6 @@ main {
 }
 
 form {
-	display: inline-block;
 	padding: 4px 0 0 15px;
 }
 
@@ -141,11 +138,13 @@ form input {
   padding: 10px 15px;
   border: 1px solid #f5f5f5;
   border-radius: 3px;
-  background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+  background-color: #f2f2f2;
 	color: #757575;
   font-family: 'Arial', sans-serif;
   font-size: 13px;
   font-weight: bold;
+	width: auto;
+	height: 36px;
 }
 
 #search-buttons > input:hover {
